--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/order/route.js", "src/app/api/deals/[id]/route.js", "src/app/api/deals/route.js", "src/app/api/products/route.js", "src/app/api/products/[id]/route.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/order/route.ts", "src/app/api/deals/[id]/route.js", "src/app/api/deals/route.js", "src/app/api/products/route.js", "src/app/api/products/[id]/route.js"],
   "exclude": ["node_modules"]
 }
